# kaiq

./: EXPORT_IMPORT_FEATURE.md
docker/: compose.full.swarm.yaml  compose.full.yaml
js/sdk/: package-lock.json
py/: Dockerfile  README.md  all_possible_config.toml  pyproject.toml  test_html_css_selectors.py
py/core/base/providers/: base.py  embedding.py  file.py  ingestion.py  llm.py  orchestration.py
py/core/main/: abstractions.py  app.py  app_entry.py
py/core/main/api/v3/: collections_router.py  documents_router.py  graph_router.py  retrieval_router.py  users_router.py
py/core/main/assembly/: factory.py
py/core/main/orchestration/: __init__.py
py/core/main/orchestration/hatchet/: graph_workflow.py  ingestion_workflow.py
py/core/main/orchestration/simple/: graph_workflow.py  ingestion_workflow.py
py/core/main/services/: export_service.py  graph_service.py  import_service.py  ingestion_service.py  retrieval_service.py
py/core/parsers/: __init__.py
py/core/parsers/media/: pdf_parser.py
py/core/parsers/structured/: __init__.py  faq_parser.py  xlsx_parser.py  xlsx_semantic_parser.py
py/core/parsers/text/: __init__.py  html_parser.py
py/core/providers/: __init__.py
py/core/providers/crypto/: bcrypt.py
py/core/providers/database/: collections.py  documents.py  graphs.py
py/core/providers/database/prompts/: xlsx_semantic.yaml
py/core/providers/email/: mailersend.py
py/core/providers/embeddings/: litellm.py  ollama.py  openai.py
py/core/providers/file/: __init__.py  azure.py  postgres.py
py/core/providers/ingestion/r2r/: base.py
py/core/providers/ingestion/unstructured/: base.py
py/core/providers/llm/: anthropic.py  azure_foundry.py  openai.py
py/core/providers/ocr/: mistral.py
py/core/providers/orchestration/: hatchet.py  simple.py
py/core/utils/: logging_config.py  otel_setup.py  semantic_metadata.py
py/migrations/versions/: 3507fec61762_fix_document_count_sync.py
py/sdk/: async_client.py
py/sdk/asnyc_methods/: documents.py
py/sdk/sync_methods/: documents.py
py/shared/abstractions/: __init__.py  base.py  document.py  export_import.py  graph.py  llm.py  search.py  tool.py  user.py
py/shared/api/models/ingestion/: responses.py
py/shared/api/models/retrieval/: responses.py
py/shared/utils/splitter/: text.py
py/tests/integration/: conftest.py  test_export_import.py
py/tests/unit/agent/: conftest.py  test_agent_old.py
py/tests/unit/document/: test_r2r_ingestion_provider.py  test_unstructured_ingestion_provider.py  test_xlsx_semantic_parser.py
py/tests/unit/graph/: test_graph_extraction_parsing.py
py/tests/unit/orchestration/: test_ensure_collections_exist.py  test_skip_graph_extraction.py
py/tests/unit/utils/: test_otel_setup.py  test_semantic_metadata.py
services/clustering/: Dockerfile.clustering
services/unstructured/: Dockerfile.unstructured  main.py
