[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r2r"
version = "3.6.6"
description = "SciPhi R2R"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Owen Colegrove", email = "owen@sciphi.ai"},
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiofiles >=25.1.0,<26.0.0",
    "alembic >=1.18.4,<2.0.0",
    "fastapi >=0.135.2,<0.136.0",
    "httpx >=0.28.1,<0.29.0",
    "httpx-aiohttp >=0.1.12,<0.2.0",
    "openai >=2.8.0,<3.0.0",
    "python-dotenv >=1.2.2,<2.0.0",
    "psycopg-binary >=3.3.3,<4.0.0",
    "requests >=2.33.0,<3.0.0",
    "tiktoken >=0.12.0,<0.13.0",
    "toml >=0.10.2,<0.11.0",
    "types-requests >=2.32.0,<3.0.0",
    "types-aiofiles >=25.1.0,<26.0.0",
    "typing-extensions >=4.15.0,<5.0.0",
    "pydantic>=2.12.5",
    "python-json-logger>=3.2.1,<5.0.0",
    "filetype>=1.2.0",
]

[project.optional-dependencies]
core = [
    "aiohttp >=3.13.3,<4.0.0",
    "aioshutil >=1.6,<2.0",
    "aiosqlite >=0.22.1,<0.23.0",
    "anthropic >=0.86.0,<1.0.0",
    "apscheduler >=3.11.2,<4.0.0",
    "asyncpg >=0.31.0,<0.32.0",
    "bcrypt >=5.0.0,<6.0.0",
    "beautifulsoup4 >=4.14.3,<5.0.0",
    "azure-storage-blob >=12.28.0,<13.0.0",
    "boto3 >=1.42.0,<2.0.0",
    "html-to-markdown >=2.29.0",
    "colorlog >=6.10.1,<7.0.0",
    "docutils >=0.22.4,<0.23.0",
    "epub >=0.5.2,<0.6.0",
    "firecrawl-py >=4.21.0",
    "fsspec >=2026.2.0,<2027.0.0",
    "future >=1.0.0,<2.0.0",
    "google-auth >=2.49.1,<3.0.0",
    "google-auth-oauthlib >=1.3.0,<2.0.0",
    "google-genai >=1.68.0,<2.0.0",
    "gunicorn >=25.2.0,<26.0.0",
    "hatchet-sdk ==0.47.1",
    "litellm >=1.82.6,<=1.82.6",
    "markdown >=3.10.2,<4.0",
    "markitdown[all] >=0.1.5",
    "mistralai>=2.1.3,<3.0.0",
    "msg-parser>=1.2.0",
    "networkx >=3.5,<4.0",
    "numpy >=2.0.0,<3.0.0",
    "olefile >=0.47,<0.48",
    "ollama >=0.6.1,<0.7.0",
    "openpyxl >=3.1.5,<4.0.0",
    "orgparse >=0.4.20251020,<0.5.0",
    "pdf2image>=1.17.0",
    "pillow >=12.1.1,<13.0.0",
    "pillow-heif >=1.3.0,<2.0.0",
    "psutil >=7.2.2,<8.0.0",
    "pydantic[email] >=2.12.5,<3.0.0",
    "pyjwt >=2.12.1,<3.0.0",
    "pynacl >=1.6.2,<2.0.0",
    "pypdf >=5.0.0,<7.0.0",
    "pypdf2 >=3.0.1,<4.0.0",
    "python-docx >=1.2.0,<2.0.0",
    "python-multipart >=0.0.22,<0.1.0",
    "python-pptx >=1.0.2,<2.0.0",
    "pyyaml >=6.0.3,<7.0.0",
    "sendgrid >=6.12.5,<7.0.0",
    "mailersend >=2.0.0,<3.0.0",
    "sentry-sdk >=2.30.0,<3.0.0",
    "sqlalchemy >=2.0.48,<3.0.0",
    "striprtf >=0.0.29,<0.0.30",
    "supabase >=2.28.3,<3.0.0",
    "tokenizers >=0.22.2,<0.23.0",
    "unstructured-client >=0.42.12,<0.43.0",
    "uvicorn >=0.42.0,<0.43.0",
    "vecs >=0.4.5,<0.5.0",
    "xlrd >=2.0.2,<3.0.0",
]

opentelemetry = [
    # OpenTelemetry Instrumentation for Observability
    # Pinned to 1.39.x/0.60b1 — mistralai 2.1.3 requires
    # opentelemetry-semantic-conventions <0.61, which excludes 0.61b0 (PEP 440).
    # SDK 1.40.0 requires semantic-conventions==0.61b0, causing a conflict.
    "opentelemetry-api>=1.39.1,<1.40.0",
    "opentelemetry-sdk>=1.39.1,<1.40.0",
    "opentelemetry-distro>=0.60b1,<0.61",
    "opentelemetry-instrumentation>=0.60b1,<0.61",
    "opentelemetry-instrumentation-fastapi>=0.60b1,<0.61",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1,<1.40.0",
]

azureai = [
    "azure-ai-inference >=1.0.0b8,<2.0.0",
    "azure-ai-ml >=1.24.0,<2.0.0",
]

[dependency-groups]
dev = [
    "colorama >=0.4.6,<0.5.0",
    "mypy >=1.19.1,<2.0.0",
    "pre-commit >=4.5.1,<5.0",
    "pytest >=9.0.0,<10.0.0",
    "pytest-asyncio >=1.0.0,<2.0.0",
    "pytest-dependency >=0.6.0,<0.7.0",
    "pytest-mock >=3.15.1,<4.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-html >=4.2.0,<5.0.0",
    "types-toml >=0.10.8,<0.11.0",
    "pytest-xdist >=3.8.0,<4.0.0",
    "ruff >=0.15.7,<0.16.0",
]
tools = [
    "biopython>=1.85",
    "colorama >=0.4.6,<0.5.0",
    "firecrawl-py>=4.21.0",
    "numpy>=2.0.0",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "simpy>=4.1.1",
    "statsmodels>=0.14.4",
]

[project.scripts]
r2r-serve = "r2r.serve:run_server"

[tool.ruff]
exclude = ["py/tests/*"]
line-length = 79
target-version = "py310"
select = ["E", "F", "I", "B"]
ignore = ["B008", "B024", "B026", "E501", "F402", "F403", "F405", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
exclude = 'core/parsers/media/pyzerox/.*|playground/.*|deprecated/.*|dump/.*|docs/source|vecs/*|core/examples/*|sdk/examples/*|tests/*'

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=r2r --cov-report=term-missing --cov-report=xml --cache-clear --import-mode=importlib"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.setuptools]
packages = { find = { where = [ "." ], include = [ "r2r*", "sdk*", "shared*", "core*" ] } }
include-package-data = true

[tool.setuptools.package-data]
core = ["configs/*.toml", "providers/database/prompts/*.yaml"]
r2r = ["r2r.toml"]
